sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: identifier expected but 'var' found.
	var inv:var=0;
                ^AlgCombSort:19: error: ')' expected but '}' found.
		}
                ^